--- a/css/index.less
+++ b/css/index.less
@@ -20,6 +20,16 @@
 *.bg-layer {
   filter: ~"alpha(opacity=50)";
 }
+.searchbar-wrap {
+  position: absolute;
+  top: 470px;
+  right: 0;
+  left: 0;
+  width: 260px;
+  height: 36px;
+  margin: auto;
+  overflow: hidden;
+}
 .divider {
   display: block;
   margin: 25px auto 40px;
@@ -27,6 +37,35 @@
   height: 5px;
   background-color: #2d6c65;
 }
+
+.music-control {
+  z-index: 10;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  &:hover {
+    cursor: pointer;
+  }
+  &:after {
+    font-family: FontAwesome, sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 40px;
+    color: #fff;
+    opacity: 0.8;
+  }
+  &.play:after {
+    content: "\f01d";
+  }
+  &.pause:after {
+    content: "\f28c";
+  }
+}
+
+
 
 .return-top {
   display: none;
@@ -79,12 +118,11 @@
   z-index: 1;
   position: relative;
   height: @header-height;
+
   .searchbar {
     position: absolute;
-    top: 470px;
+    top: 36px;
     left: 0;
-    right: 0;
-    margin: auto;
   }
   .searchbar_input {
     background: #fff;
@@ -99,33 +137,49 @@
   .bg-layer {
     background-color: #1E4843;
   }
-  .header-text {
-    width: 100%;
-    position: absolute;
-    top: @text-top;
-    text-align: center;
-  }
   .welcome {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 200px;
+    text-align: center;
     font-weight: 300;
     color: #fff;
     font-size: 40px;
     margin: 0;
+    opacity: 0;
   }
   .title {
+    position: absolute;
+    top: 240px;
     margin: 0;
     line-height: @title-font-size;
     color: #fff;
+    width: 100%;
+    left: 0;
     text-align: center;
     font-size: @title-font-size;
-    font-weight: 900;
+    font-weight: 700;
+  }
+  .desc-wrap {
+    top: 350px;
+    position: absolute;
+    width: 100%;
+    height: 60px;
+    overflow: hidden;
   }
   .desc {
+    position: absolute;
+    top: 60px;
+    width: 100%;
     font-size: 24px;
     font-weight: 300;
     color: #fff;
     text-align: center;
     p {
       margin: 0;
+      height: 30px;
+      line-height: 30px;
     }
   }
   .nav {
@@ -134,7 +188,22 @@
     bottom: 80px;
   }
   .navbar {
+    overflow: hidden;
     display: inline-block;
+    a {
+      position: relative;
+      top: 40px;
+      opacity: 0;
+    }
+    //li {
+    //  width: 80px;
+    //  height: 40px;
+    //  position: relative;
+    //}
+    //a {
+    //  position: absolute;
+    //  left: -100%;
+    //}
   }
   @media (max-width: 767px) {
     .title {
@@ -148,8 +217,8 @@
     }
   }
 }
-.header-text span {
-  visibility: hidden;
+.header .title span {
+  opacity: 0;
 }
 
 /*
@@ -236,14 +305,40 @@
 @p-font-size: 14px;
 
 .header-bg {
+  overflow: hidden;
+  -webkit-transition: border-radius 3s;
+  -moz-transition: border-radius 3s;
+  -ms-transition: border-radius 3s;
+  -o-transition: border-radius 3s;
+  transition: border-radius 3s;
   position: fixed;
-  top: 0;
   z-index: -9;
-  width: 100%;
-  height: 100%;
+  //top: 0;
+  //width: 100%;
+  //height: 100%;
+  top: 50%;
+  left: 50%;
+  width: 0;
+  height: 0;
   background-image: url('../images/index-bg-3.jpg');
   -webkit-background-size: cover;
   background-size: cover;
+  opacity: 0;
+  &:after {
+    content: "";
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    background-color: #1E4843;
+  }
+}
+.header-bg.circle {
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  border-radius: 100%;
 }
 
 .youth-league {
@@ -287,10 +382,29 @@
     height: 100%;
   }
   .intro-wrap {
-    opacity: 0.9;
     float: left;
+    position: relative;
     height: 100%;
     width: 10%;
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-position: center;
+  }
+  .intro-wrap:after, .intro-content {
+    z-index: 1;
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .intro-wrap:after {
+    opacity: 0.4;
+    background: #444;
+  }
+  .intro-content {
+    z-index: 9;
   }
   .red {
     background-color: #612d29;
