--- a/css/theme.less
+++ b/css/theme.less
@@ -31,6 +31,7 @@ body {
   height: @link-square-size;
   text-align: center;
   color: #fff;
+  background: #45a59a;
   //background-color: @link-square-bg-color;
   //-webkit-transition: bottom 0.5s, opacity 0.5s, background-color 0.5s;
   //-moz-transition: bottom 0.5s, opacity 0.5s, background-color 0.5s;
@@ -64,7 +65,8 @@ body {
   height: 280px;
   left: -150px;
   top: -150px;
-  background: linear-gradient(135deg, #45a59a 47%, #fff 50% , #45a59a 53%);
+  background: linear-gradient(135deg, #45a59a 46.5%, #fff 46.5% , #fff 53.5% , #45a59a 53.5%);
+  opacity: 0.5;
 }
 .link-square_icon, .link-square_desc {
   z-index: 9;
@@ -81,22 +83,34 @@ body {
 }
 .link-square.lighter {
   .link-square_bg {
-    background: linear-gradient(135deg, #76c6bd 47%, #fff 50%, #76c6bd 53%);
+    background: linear-gradient(135deg, #76c6bd 46.5%, #fff 46.5%, #fff 53.5%, #76c6bd 53.5%);
+  }
+  .link-square {
+    background: #76c6bd;
   }
 }
 .link-square.light {
   .link-square_bg {
-    background: linear-gradient(135deg, #5abaaf 47%, #fff 50% , #5abaaf 53%);
+    background: linear-gradient(135deg, #5abaaf 46.5%, #fff 46.5% , #fff 53.5%, #5abaaf 53.5%);
+  }
+  .link-square {
+    background: #5abaaf;
   }
 }
 .link-square.dark {
   .link-square_bg {
-    background: linear-gradient(135deg, #39897f 47%, #fff 50% , #39897f 53%);
+    background: linear-gradient(135deg, #39897f 46.5%, #fff 46.5% , #fff 53.5%, #39897f 53.5%);
+  }
+  .link-square {
+    background: #39897f;
   }
 }
 .link-square.darker {
   .link-square_bg {
-    background: linear-gradient(135deg, #2d6c65 47%, #fff 50% , #2d6c65 53%);
+    background: linear-gradient(135deg, #2d6c65 46.5%, #fff 46.5% , #fff 53.5%, #2d6c65 53.5%);
+  }
+  .link-square {
+    background: #2d6c65;
   }
 }
 
@@ -395,7 +409,6 @@ body {
   float: left;
   width: 100%;
   height: @link-img-hz-img-height + 2 * @link-img-hz-img-gap;
-  //margin-top: 20px;
   border-bottom: 2px solid #bbb;
 }
 .link-img-hz_img-wrap {
